--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -8,18 +8,18 @@
 	crossorigin="anonymous">
 <title>First Page</title>
 </head>
-<body>
+<body style="background-color: rgb(235, 235, 235)">
 	<div class="jumbotron text-center"
 		style="background-color: #ffce2b; border-bottom: 5px solid #f2f2f2;">
 		<h1 style="color: white; font-size: 45px;">Employee Reimbursement
 			System</h1>
 	</div>
 
-	<div class="section-1-container">
+	<div class="section-1-container" style="background-color: white; width: 30%; margin:auto; border-radius: 15px; padding:1em" >
 		<div class="container">
 			<div class="row">
 				<div class="col-10 offset-1 col-lg-8 offset-lg-2 d-flex justify-content-centeralign-items-center">
-					<div class="div-to-align">
+					<div class="div-to-align"style="text-align:center">
 						<p>Login to enter either the user portal or the financial manager.</p>
 					</div>
 				</div>
