--- a/src/main/webapp/static/submissions.html
+++ b/src/main/webapp/static/submissions.html
@@ -9,7 +9,7 @@
         <title>ERS Home</title>
 </head>
 
-<body>
+<body style="background-color: rgb(235, 235, 235)">
     <div class="jumbotron text-center" style="background-color: #ffce2b; border-bottom: 5px solid #f2f2f2;">
         <h1 id="welcome" style="color: white; font-size: 45px;">Employee Reimbursement Page</h1>
     </div>
