--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -10,12 +10,12 @@
 </head>
 <body style="background-color: rgb(235, 235, 235)">
 	<div class="jumbotron text-center"
-		style="background-color: #ffce2b; border-bottom: 5px solid #f2f2f2;">
+		style="background-color: #ffce2b; border-bottom: 5px solid #f2f2f2;width:100%">
 		<h1 style="color: white; font-size: 45px;">Employee Reimbursement
 			System</h1>
 	</div>
 
-	<div class="section-1-container" style="background-color: white; width: 30%; margin:auto; border-radius: 15px; padding:1em" >
+	<div class="section-1-container" style="background-color: white; width: 30%; margin:auto; border-radius: 15px; padding:1em; box-shadow: 5px 5px 5px rgba(92, 92, 92, 0.261);" >
 		<div class="container">
 			<div class="row">
 				<div class="col-10 offset-1 col-lg-8 offset-lg-2 d-flex justify-content-centeralign-items-center">
@@ -47,6 +47,19 @@
 			</div>
 		</div>
 	</div>
+	<div class="footer">
+		<footer style="
+		background-color: white;
+		height: 100px;
+		padding: 15px;
+		position: absolute;
+		bottom:0;
+		width:100%;
+		text-align:center;">		
+		</footer>
+	</div>
+
+	
 	<script>
 		let button = document.getElementById("login");
 		button.addEventListener("click", sendLogin);
