image upload works, can retrieve images as well, submissions table color coded

--- a/src/main/webapp/static/administrator-portal.html
+++ b/src/main/webapp/static/administrator-portal.html
@@ -296,7 +296,7 @@
 						break;
 				}
 				theReimbursementId = this.id;
-				update(theReimoyeebursementId, statusNumber);
+				update(theReimbursementId, statusNumber);
 				
 			})
 		}
