--- a/src/main/webapp/static/submissions.html
+++ b/src/main/webapp/static/submissions.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="section-1-container" style="background-color: white; width: 75%; margin:auto; border-radius: 15px; padding:1em; box-shadow: 5px 5px 5px rgba(92, 92, 92, 0.261);">
-        <div class="container">
+        <div class="flex-container">
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2 d-flex justify-content-center align-items-center">
                     <p>Fill out the form below to submit a reimbursement application</p>
@@ -35,7 +35,7 @@
                                     <input type="radio" name="submissionType" value=4>Other
                                 </label>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group flex-container">
                                 <label class="sr-only" for="firstName">First Name</label>
                                 <input type="text" class="form-control" id="firstName" placeholder="First Name">
 
