added final name tag and changed index

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-10 offset-1 col-lg-8 offset-lg-2 d-flex justify-content-centeralign-items-center">
 					<div class="div-to-align"style="text-align:center">
-						<p>Login to enter either the user portal or the financial manager.</p>
+						<p>Login to enter either the employee portal or the finance manager portal.</p>
 					</div>
 				</div>
 			</div>
@@ -58,8 +58,6 @@
 		text-align:center;">		
 		</footer>
 	</div>
-
-	
 	<script>
 		let button = document.getElementById("login");
 		button.addEventListener("click", sendLogin);
