--- a/src/main/webapp/static/administrator-portal.html
+++ b/src/main/webapp/static/administrator-portal.html
@@ -20,10 +20,10 @@
 					<button type="submit" class="btn btn-deault" id="ViewAllReimbursements">View All Reimbursements</button>
 				</li>
 				<li class= "nav-item" style="margin-left: 20px;">
-					<button type="submi" class="btn btn-default" id="ManageAccounts">Manage Accounts</button>
+					<button type="submit" class="btn btn-default" id="ManageAccounts" name="ManageAccounts">Manage Accounts</button>
 				</li>
 				<li class="nav-item" style="margin-left: 20px;">
-					<button type="submit" class="btn btn-default" id="logout">Logout</button>
+					<button type="submit" class="btn btn-default" id="logout" name="logout">Logout</button>
 				</li>
 			</ul>
 
