--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -6,7 +6,7 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
-<title>First Page</title>
+<title>ERS Home</title>
 </head>
 <body style="background-color: rgb(235, 235, 235)">
 	<div class="jumbotron text-center"
@@ -40,7 +40,7 @@
 									type="password" class="form-control" name="password"
 									id="password" placeholder="Password">
 							</div>
-							<button type="submit" class="btn btn-default" id="login">Login</button>
+							<button type="submit" name="submit" class="btn btn-default" id="login">Login</button>
 						</form>
 					</div>
 				</div>
