--- a/src/main/webapp/static/manage-accounts.html
+++ b/src/main/webapp/static/manage-accounts.html
@@ -22,10 +22,10 @@
 					<button type="submit" class="btn btn-default" id="ManageAccounts">Manage Accounts</button>
 				</li> -->
 				<li class="nav-item" style="margin-left:20px">
-					<button type="submit" class="btn btn-default" id="BackToReimbursements">Back to All Reimbursements</button>
+					<button type="submit" class="btn btn-default" id="BackToReimbursements" name="BackToAllReimbursements">Back to All Reimbursements</button>
 				</li>
 				<li class="nav-item" style="margin-left: 20px;">
-					<button type="submit" class="btn btn-default" id="logout">Logout</button>
+					<button type="submit" class="btn btn-default" id="logout" name="logout">Logout</button>
 				</li>
 			</ul>
 
