--- a/src/main/webapp/static/submissions.html
+++ b/src/main/webapp/static/submissions.html
@@ -165,7 +165,7 @@
             try {
 				console.log("attemping to send get request");
                 console.log("the user that is sending the request is: " + JSON.stringify(currentUser));
-				let response = await fetch("http://localhost:8080/ERS_Christopher_Castrillon/reimbursements/"+currentUser);
+				let response = await fetch("http://ec2-18-212-188-152.compute-1.amazonaws.com:8085/ERS_Christopher_Castrillon/reimbursements/"+currentUser);
 				let reimbList = await response.json();
 				console.log("data : " + JSON.stringify(reimbList));
                 getObjectsToSendToTable(reimbList);
@@ -205,7 +205,7 @@
                 }
             )
             try {
-                let response = await fetch("http://localhost:8080/ERS_Christopher_Castrillon/reimbursements", {
+                let response = await fetch("http://ec2-18-212-188-152.compute-1.amazonaws.com:8085/ERS_Christopher_Castrillon/reimbursements", {
                     body: formData,
                     method: 'POST',
                     headers: { "Content-Type": "application/json" },
@@ -357,7 +357,7 @@
             
         }
         function logout() {
-            window.location.assign("http://localhost:8080/ERS_Christopher_Castrillon/logout");
+            window.location.assign("http://ec2-18-212-188-152.compute-1.amazonaws.com:8085/ERS_Christopher_Castrillon/logout");
         }
     </script>
 </body>
