--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -75,7 +75,7 @@
 			console.log("inside of the function");
 			try {
 				console.log("attempting to send a request");
-				let response = await fetch("http://ec2-18-212-188-152.compute-1.amazonaws.com:8085/ERS_Christopher_Castrillon/login", {
+				let response = await fetch("http://localhost:8080/ERS_Christopher_Castrillon/login", {
 					body: loginData,
 					method: 'POST',
 					headers: { "Content-Type": "application/json" },
@@ -88,10 +88,10 @@
 				console.log("current user is : " + sessionStorage.currentUser);
 				
 				if(employee.role.name === "employee") {
-					window.location.assign("http://ec2-18-212-188-152.compute-1.amazonaws.com:8085/ERS_Christopher_Castrillon/submissions");
+					window.location.assign("http://localhost:8080/ERS_Christopher_Castrillon/submissions");
 				}
 				else if(employee.role.name ==="finance manager") {
-					window.location.assign("http://ec2-18-212-188-152.compute-1.amazonaws.com:8085/ERS_Christopher_Castrillon/administrator-portal");
+					window.location.assign("http://localhost:8080/ERS_Christopher_Castrillon/administrator-portal");
 				}
 				//or window.location.href = "htp://localhost:8080/Project_1_Christopher_Castrillon/Submissions""
 												//this used to be response
